# scannerc

./: BUILD_WINDOWS.md  CMakeLists.txt  PORTABLE_RELEASE.md  build_windows_qt.bat  windows_cache_rules.json  windows_cache_scan_table_model.cpp  windows_cache_scan_table_model.h  windows_cache_scanner_example.cpp  windows_cache_scanner_qt.cpp  windows_cache_scanner_qt.h  windows_cache_scanner_window.cpp
.github/workflows/: build-windows-portable.yml
